--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "start": "nodemon ./src/app.ts"
   },
   "dependencies": {
+    "@kafkajs/confluent-schema-registry": "^3.2.1",
+    "@ovotech/avro-decimal": "^0.1.5",
     "@types/express": "^4.17.13",
+    "avsc": "^5.7.5",
     "express": "^4.18.1",
     "typescript": "^4.7.4",
     "uuid": "^8.3.2"
